Changed font-size for small screens Fixed contact overlapping when on a small screen

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -160,4 +160,14 @@ object-fit: cover;
 	#servicePage {
 		height: auto;
 	}
+	.contact{
+		height: auto !important;
+	}
+	.form{
+		margin-top: 50px !important;
+		margin-bottom: 50px !important;
+	}
+	html{
+		font-size: 12px;
+	}
   }
